runner/parser.js
export default // Generated by Peggy 1.2.0.
//
// https://peggyjs.org/
(function () {
  'use strict'

  function peg$subclass(child, parent) {
    function C() {
      this.constructor = child
    }
    C.prototype = parent.prototype
    child.prototype = new C()
  }

  function peg$SyntaxError(message, expected, found, location) {
    var self = Error.call(this, message)
    if (Object.setPrototypeOf) {
      Object.setPrototypeOf(self, peg$SyntaxError.prototype)
    }
    self.expected = expected
    self.found = found
    self.location = location
    self.name = 'SyntaxError'
    return self
  }

  peg$subclass(peg$SyntaxError, Error)

  function peg$padEnd(str, targetLength, padString) {
    padString = padString || ' '
    if (str.length > targetLength) {
      return str
    }
    targetLength -= str.length
    padString += padString.repeat(targetLength)
    return str + padString.slice(0, targetLength)
  }

  peg$SyntaxError.prototype.format = function (sources) {
    var str = 'Error: ' + this.message
    if (this.location) {
      var src = null
      var k
      for (k = 0; k < sources.length; k++) {
        if (sources[k].source === this.location.source) {
          src = sources[k].text.split(/\r\n|\n|\r/g)
          break
        }
      }
      var s = this.location.start
      var loc = this.location.source + ':' + s.line + ':' + s.column
      if (src) {
        var e = this.location.end
        var filler = peg$padEnd('', s.line.toString().length, ' ')
        var line = src[s.line - 1]
        var last = s.line === e.line ? e.column : line.length + 1
        str +=
          '\n --> ' +
          loc +
          '\n' +
          filler +
          ' |\n' +
          s.line +
          ' | ' +
          line +
          '\n' +
          filler +
          ' | ' +
          peg$padEnd('', s.column - 1, ' ') +
          peg$padEnd('', last - s.column, '^')
      } else {
        str += '\n at ' + loc
      }
    }
    return str
  }

  peg$SyntaxError.buildMessage = function (expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
      literal: function (expectation) {
        return '"' + literalEscape(expectation.text) + '"'
      },

      class: function (expectation) {
        var escapedParts = expectation.parts.map(function (part) {
          return Array.isArray(part)
            ? classEscape(part[0]) + '-' + classEscape(part[1])
            : classEscape(part)
        })

        return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']'
      },

      any: function () {
        return 'any character'
      },

      end: function () {
        return 'end of input'
      },

      other: function (expectation) {
        return expectation.description
      },
    }

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase()
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g, '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g, function (ch) {
          return '\\x0' + hex(ch)
        })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
          return '\\x' + hex(ch)
        })
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g, '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g, function (ch) {
          return '\\x0' + hex(ch)
        })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
          return '\\x' + hex(ch)
        })
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation)
    }

    function describeExpected(expected) {
      var descriptions = expected.map(describeExpectation)
      var i, j

      descriptions.sort()

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i]
            j++
          }
        }
        descriptions.length = j
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0]

        case 2:
          return descriptions[0] + ' or ' + descriptions[1]

        default:
          return (
            descriptions.slice(0, -1).join(', ') +
            ', or ' +
            descriptions[descriptions.length - 1]
          )
      }
    }

    function describeFound(found) {
      return found ? '"' + literalEscape(found) + '"' : 'end of input'
    }

    return (
      'Expected ' +
      describeExpected(expected) +
      ' but ' +
      describeFound(found) +
      ' found.'
    )
  }

  function peg$parse(input, options) {
    options = options !== undefined ? options : {}

    var peg$FAILED = {}
    var peg$source = options.grammarSource

    var peg$startRuleFunctions = { program: peg$parseprogram }
    var peg$startRuleFunction = peg$parseprogram

    var peg$c0 = 'vars'
    var peg$c1 = 'variables'
    var peg$c2 = ':'
    var peg$c3 = '='
    var peg$c4 = 'res'
    var peg$c5 = 'ult'
    var peg$c6 = 'filter'
    var peg$c7 = 'implies'
    var peg$c8 = '>'
    var peg$c9 = 'or'
    var peg$c10 = 'xor'
    var peg$c11 = 'and'
    var peg$c12 = 'not'
    var peg$c13 = '-'
    var peg$c14 = '('
    var peg$c15 = ')'
    var peg$c16 = '\r'
    var peg$c17 = '\n'

    var peg$r0 = /^[\-=]/
    var peg$r1 = /^[|+]/
    var peg$r2 = /^[&*]/
    var peg$r3 = /^[01]/
    var peg$r4 = /^[a-zA-Z]/
    var peg$r5 = /^[a-zA-Z0-9]/
    var peg$r6 = /^[ \t]/

    var peg$e0 = peg$literalExpectation('vars', false)
    var peg$e1 = peg$literalExpectation('variables', false)
    var peg$e2 = peg$literalExpectation(':', false)
    var peg$e3 = peg$literalExpectation('=', false)
    var peg$e4 = peg$literalExpectation('res', false)
    var peg$e5 = peg$literalExpectation('ult', false)
    var peg$e6 = peg$literalExpectation('filter', false)
    var peg$e7 = peg$otherExpectation('expression')
    var peg$e8 = peg$literalExpectation('implies', false)
    var peg$e9 = peg$classExpectation(['-', '='], false, false)
    var peg$e10 = peg$literalExpectation('>', false)
    var peg$e11 = peg$literalExpectation('or', false)
    var peg$e12 = peg$classExpectation(['|', '+'], false, false)
    var peg$e13 = peg$literalExpectation('xor', false)
    var peg$e14 = peg$literalExpectation('and', false)
    var peg$e15 = peg$classExpectation(['&', '*'], false, false)
    var peg$e16 = peg$literalExpectation('not', false)
    var peg$e17 = peg$literalExpectation('-', false)
    var peg$e18 = peg$literalExpectation('(', false)
    var peg$e19 = peg$literalExpectation(')', false)
    var peg$e20 = peg$otherExpectation('value')
    var peg$e21 = peg$classExpectation(['0', '1'], false, false)
    var peg$e22 = peg$otherExpectation('variable')
    var peg$e23 = peg$classExpectation(
      [
        ['a', 'z'],
        ['A', 'Z'],
      ],
      false,
      false,
    )
    var peg$e24 = peg$classExpectation(
      [
        ['a', 'z'],
        ['A', 'Z'],
        ['0', '9'],
      ],
      false,
      false,
    )
    var peg$e25 = peg$otherExpectation('whitespace')
    var peg$e26 = peg$classExpectation([' ', '\t'], false, false)
    var peg$e27 = peg$otherExpectation('end of line')
    var peg$e28 = peg$literalExpectation('\r', false)
    var peg$e29 = peg$literalExpectation('\n', false)

    var peg$f0 = function (vars, aliases, results, filters) {
      return { vars, aliases, results, filters }
    }
    var peg$f1 = function (items) {
      return items.map(it => it[1])
    }
    var peg$f2 = function (name, value) {
      return { name, value }
    }
    var peg$f3 = function (items) {
      const result = {}
      items.forEach(it => (result[it.name] = it.value))
      return result
    }
    var peg$f4 = function (value) {
      return value
    }
    var peg$f5 = function (o1, o2) {
      return { operation: 'equality', operand1: o1, operand2: o2 }
    }
    var peg$f6 = function (o1, o2) {
      return { operation: 'implication', operand1: o1, operand2: o2 }
    }
    var peg$f7 = function (o1, o2) {
      return { operation: 'or', operand1: o1, operand2: o2 }
    }
    var peg$f8 = function (o1, o2) {
      return { operation: 'xor', operand1: o1, operand2: o2 }
    }
    var peg$f9 = function (o1, o2) {
      return { operation: 'and', operand1: o1, operand2: o2 }
    }
    var peg$f10 = function (op) {
      return { operation: 'not', operand1: op, operand2: null }
    }
    var peg$f11 = function (expr) {
      return expr
    }
    var peg$f12 = function () {
      return text() === '1'
    }
    var peg$f13 = function () {
      return text()
    }

    var peg$currPos = 0
    var peg$savedPos = 0
    var peg$posDetailsCache = [{ line: 1, column: 1 }]
    var peg$maxFailPos = 0
    var peg$maxFailExpected = []
    var peg$silentFails = 0

    var peg$result

    if ('startRule' in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error(
          'Can\'t start parsing from rule "' + options.startRule + '".',
        )
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule]
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos)
    }

    function offset() {
      return peg$savedPos
    }

    function range() {
      return {
        source: peg$source,
        start: peg$savedPos,
        end: peg$currPos,
      }
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos)
    }

    function expected(description, location) {
      location =
        location !== undefined
          ? location
          : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location,
      )
    }

    function error(message, location) {
      location =
        location !== undefined
          ? location
          : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location)
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: 'literal', text: text, ignoreCase: ignoreCase }
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return {
        type: 'class',
        parts: parts,
        inverted: inverted,
        ignoreCase: ignoreCase,
      }
    }

    function peg$anyExpectation() {
      return { type: 'any' }
    }

    function peg$endExpectation() {
      return { type: 'end' }
    }

    function peg$otherExpectation(description) {
      return { type: 'other', description: description }
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos]
      var p

      if (details) {
        return details
      } else {
        p = pos - 1
        while (!peg$posDetailsCache[p]) {
          p--
        }

        details = peg$posDetailsCache[p]
        details = {
          line: details.line,
          column: details.column,
        }

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++
            details.column = 1
          } else {
            details.column++
          }

          p++
        }

        peg$posDetailsCache[pos] = details

        return details
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos)
      var endPosDetails = peg$computePosDetails(endPos)

      return {
        source: peg$source,
        start: {
          offset: startPos,
          line: startPosDetails.line,
          column: startPosDetails.column,
        },
        end: {
          offset: endPos,
          line: endPosDetails.line,
          column: endPosDetails.column,
        },
      }
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) {
        return
      }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos
        peg$maxFailExpected = []
      }

      peg$maxFailExpected.push(expected)
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location)
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location,
      )
    }

    function peg$parseprogram() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parsevars()
      if (s1 !== peg$FAILED) {
        s2 = peg$parsealiases()
        s3 = peg$parseresults()
        if (s3 !== peg$FAILED) {
          s4 = peg$parsefilters()
          peg$savedPos = s0
          s0 = peg$f0(s1, s2, s3, s4)
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parsevars() {
      var s0, s1, s2, s3, s4, s5, s6

      s0 = peg$currPos
      if (input.substr(peg$currPos, 4) === peg$c0) {
        s1 = peg$c0
        peg$currPos += 4
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e0)
        }
      }
      if (s1 === peg$FAILED) {
        if (input.substr(peg$currPos, 9) === peg$c1) {
          s1 = peg$c1
          peg$currPos += 9
        } else {
          s1 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$e1)
          }
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos
        s3 = peg$parse_()
        if (s3 === peg$FAILED) {
          s3 = null
        }
        if (input.charCodeAt(peg$currPos) === 58) {
          s4 = peg$c2
          peg$currPos++
        } else {
          s4 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$e2)
          }
        }
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 61) {
            s5 = peg$c3
            peg$currPos++
          } else {
            s5 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e3)
            }
          }
          if (s5 === peg$FAILED) {
            s5 = null
          }
          s3 = [s3, s4, s5]
          s2 = s3
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
        if (s2 !== peg$FAILED) {
          s3 = []
          s4 = peg$currPos
          s5 = peg$parse_()
          if (s5 !== peg$FAILED) {
            s6 = peg$parsevar()
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6]
              s4 = s5
            } else {
              peg$currPos = s4
              s4 = peg$FAILED
            }
          } else {
            peg$currPos = s4
            s4 = peg$FAILED
          }
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4)
              s4 = peg$currPos
              s5 = peg$parse_()
              if (s5 !== peg$FAILED) {
                s6 = peg$parsevar()
                if (s6 !== peg$FAILED) {
                  s5 = [s5, s6]
                  s4 = s5
                } else {
                  peg$currPos = s4
                  s4 = peg$FAILED
                }
              } else {
                peg$currPos = s4
                s4 = peg$FAILED
              }
            }
          } else {
            s3 = peg$FAILED
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseeol()
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0
              s0 = peg$f1(s3)
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parsealias() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parsevar()
      if (s1 !== peg$FAILED) {
        s2 = peg$parseassign()
        if (s2 !== peg$FAILED) {
          s3 = peg$parseexpr()
          if (s3 !== peg$FAILED) {
            s4 = peg$parseeol()
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0
              s0 = peg$f2(s1, s3)
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parsealiases() {
      var s0, s1, s2

      s0 = peg$currPos
      s1 = []
      s2 = peg$parsealias()
      while (s2 !== peg$FAILED) {
        s1.push(s2)
        s2 = peg$parsealias()
      }
      peg$savedPos = s0
      s1 = peg$f3(s1)
      s0 = s1

      return s0
    }

    function peg$parseresult() {
      var s0, s1, s2, s3, s4, s5, s6, s7

      s0 = peg$currPos
      if (input.substr(peg$currPos, 3) === peg$c4) {
        s1 = peg$c4
        peg$currPos += 3
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e4)
        }
      }
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 3) === peg$c5) {
          s2 = peg$c5
          peg$currPos += 3
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$e5)
          }
        }
        if (s2 === peg$FAILED) {
          s2 = null
        }
        s3 = peg$parse_()
        if (s3 !== peg$FAILED) {
          s4 = peg$parsevar()
          if (s4 !== peg$FAILED) {
            s5 = peg$parseassign()
            if (s5 !== peg$FAILED) {
              s6 = peg$parseexpr()
              if (s6 !== peg$FAILED) {
                s7 = peg$parseeol()
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0
                  s0 = peg$f2(s4, s6)
                } else {
                  peg$currPos = s0
                  s0 = peg$FAILED
                }
              } else {
                peg$currPos = s0
                s0 = peg$FAILED
              }
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseresults() {
      var s0, s1, s2

      s0 = peg$currPos
      s1 = []
      s2 = peg$parseresult()
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2)
          s2 = peg$parseresult()
        }
      } else {
        s1 = peg$FAILED
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$f3(s1)
      }
      s0 = s1

      return s0
    }

    function peg$parsefilter() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      if (input.substr(peg$currPos, 6) === peg$c6) {
        s1 = peg$c6
        peg$currPos += 6
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e6)
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_()
        if (s2 !== peg$FAILED) {
          s3 = peg$parseexpr()
          if (s3 !== peg$FAILED) {
            s4 = peg$parseeol()
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0
              s0 = peg$f4(s3)
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parsefilters() {
      var s0, s1

      s0 = []
      s1 = peg$parsefilter()
      while (s1 !== peg$FAILED) {
        s0.push(s1)
        s1 = peg$parsefilter()
      }

      return s0
    }

    function peg$parseexpr() {
      var s0, s1

      peg$silentFails++
      s0 = peg$parseeq()
      peg$silentFails--
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e7)
        }
      }

      return s0
    }

    function peg$parseeq() {
      var s0, s1, s2, s3, s4, s5

      s0 = peg$currPos
      s1 = peg$parseimpl()
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_()
        if (s2 === peg$FAILED) {
          s2 = null
        }
        s3 = []
        if (input.charCodeAt(peg$currPos) === 61) {
          s4 = peg$c3
          peg$currPos++
        } else {
          s4 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$e3)
          }
        }
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4)
            if (input.charCodeAt(peg$currPos) === 61) {
              s4 = peg$c3
              peg$currPos++
            } else {
              s4 = peg$FAILED
              if (peg$silentFails === 0) {
                peg$fail(peg$e3)
              }
            }
          }
        } else {
          s3 = peg$FAILED
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_()
          if (s4 === peg$FAILED) {
            s4 = null
          }
          s5 = peg$parseeq()
          if (s5 !== peg$FAILED) {
            peg$savedPos = s0
            s0 = peg$f5(s1, s5)
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseimpl()
      }

      return s0
    }

    function peg$parseimpl() {
      var s0, s1, s2, s3, s4, s5, s6

      s0 = peg$currPos
      s1 = peg$parseor()
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos
        s3 = peg$parse_()
        if (s3 !== peg$FAILED) {
          if (input.substr(peg$currPos, 7) === peg$c7) {
            s4 = peg$c7
            peg$currPos += 7
          } else {
            s4 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e8)
            }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_()
            if (s5 !== peg$FAILED) {
              s3 = [s3, s4, s5]
              s2 = s3
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
        if (s2 === peg$FAILED) {
          s2 = peg$currPos
          s3 = peg$parse_()
          if (s3 === peg$FAILED) {
            s3 = null
          }
          if (peg$r0.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s4 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e9)
            }
          }
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 62) {
              s5 = peg$c8
              peg$currPos++
            } else {
              s5 = peg$FAILED
              if (peg$silentFails === 0) {
                peg$fail(peg$e10)
              }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_()
              if (s6 === peg$FAILED) {
                s6 = null
              }
              s3 = [s3, s4, s5, s6]
              s2 = s3
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseimpl()
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0
            s0 = peg$f6(s1, s3)
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseor()
      }

      return s0
    }

    function peg$parseor() {
      var s0, s1, s2, s3, s4, s5

      s0 = peg$currPos
      s1 = peg$parseand()
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos
        s3 = peg$parse_()
        if (s3 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c9) {
            s4 = peg$c9
            peg$currPos += 2
          } else {
            s4 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e11)
            }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_()
            if (s5 !== peg$FAILED) {
              s3 = [s3, s4, s5]
              s2 = s3
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
        if (s2 === peg$FAILED) {
          s2 = peg$currPos
          s3 = peg$parse_()
          if (s3 === peg$FAILED) {
            s3 = null
          }
          if (peg$r1.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s4 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e12)
            }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_()
            if (s5 === peg$FAILED) {
              s5 = null
            }
            s3 = [s3, s4, s5]
            s2 = s3
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseor()
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0
            s0 = peg$f7(s1, s3)
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos
        s1 = peg$parseand()
        if (s1 !== peg$FAILED) {
          s2 = peg$currPos
          s3 = peg$parse_()
          if (s3 !== peg$FAILED) {
            if (input.substr(peg$currPos, 3) === peg$c10) {
              s4 = peg$c10
              peg$currPos += 3
            } else {
              s4 = peg$FAILED
              if (peg$silentFails === 0) {
                peg$fail(peg$e13)
              }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_()
              if (s5 !== peg$FAILED) {
                s3 = [s3, s4, s5]
                s2 = s3
              } else {
                peg$currPos = s2
                s2 = peg$FAILED
              }
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
          if (s2 === peg$FAILED) {
            s2 = peg$currPos
            s3 = peg$parse_()
            if (s3 === peg$FAILED) {
              s3 = null
            }
            if (peg$r1.test(input.charAt(peg$currPos))) {
              s4 = input.charAt(peg$currPos)
              peg$currPos++
            } else {
              s4 = peg$FAILED
              if (peg$silentFails === 0) {
                peg$fail(peg$e12)
              }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_()
              if (s5 === peg$FAILED) {
                s5 = null
              }
              s3 = [s3, s4, s5]
              s2 = s3
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parseor()
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0
              s0 = peg$f8(s1, s3)
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parseand()
        }
      }

      return s0
    }

    function peg$parseand() {
      var s0, s1, s2, s3, s4, s5

      s0 = peg$currPos
      s1 = peg$parsenot()
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos
        s3 = peg$parse_()
        if (s3 !== peg$FAILED) {
          if (input.substr(peg$currPos, 3) === peg$c11) {
            s4 = peg$c11
            peg$currPos += 3
          } else {
            s4 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e14)
            }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_()
            if (s5 !== peg$FAILED) {
              s3 = [s3, s4, s5]
              s2 = s3
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
        if (s2 === peg$FAILED) {
          s2 = peg$currPos
          s3 = peg$parse_()
          if (s3 === peg$FAILED) {
            s3 = null
          }
          if (peg$r2.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s4 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e15)
            }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_()
            if (s5 === peg$FAILED) {
              s5 = null
            }
            s3 = [s3, s4, s5]
            s2 = s3
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseand()
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0
            s0 = peg$f9(s1, s3)
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parsenot()
      }

      return s0
    }

    function peg$parsenot() {
      var s0, s1, s2, s3

      s0 = peg$currPos
      s1 = peg$currPos
      if (input.substr(peg$currPos, 3) === peg$c12) {
        s2 = peg$c12
        peg$currPos += 3
      } else {
        s2 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e16)
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_()
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3]
          s1 = s2
        } else {
          peg$currPos = s1
          s1 = peg$FAILED
        }
      } else {
        peg$currPos = s1
        s1 = peg$FAILED
      }
      if (s1 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 45) {
          s1 = peg$c13
          peg$currPos++
        } else {
          s1 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$e17)
          }
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsenot()
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0
          s0 = peg$f10(s2)
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseterm()
      }

      return s0
    }
